--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="container body-content app-container">
     <pre>Current Exercise: {{currentExercise | json}}</pre>
-    <pre>Time Left: {{currentExercise.duration-currentExerciseDuration}}</pre>
+    <pre>Time Left: {{currentExercise.duration - currentExerciseDuration}}</pre>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js"></script>
 <script src="js/7MinWorkout/workout.js"></script>
