--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <!--<base href="/">-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>7 Minute Workout</title>
     <meta name="description" content="">
@@ -10,7 +11,7 @@
     <link href="//fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body ng-app="app" ng-controller="WorkoutController">
+<body ng-app="app">
 <div class="navbar navbar-default navbar-fixed-top top-navbar">
     <div class="container app-container">
         <div class="navbar-header">
@@ -19,10 +20,10 @@
     </div>
 </div>
 <div class="container body-content app-container">
-    <pre>Current Exercise: {{currentExercise | json}}</pre>
-    <pre>Time Left: {{currentExercise.duration - currentExerciseDuration}}</pre>
+    <div ng-view></div>
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.3/angular-route.js"></script>
 <script src="js/7MinWorkout/workout.js"></script>
 <script src="js/app.js"></script>
 </body>
